Fix the bandwith scraper error

--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "puppeteer-extra": "^3.1.9",
     "puppeteer-extra-plugin-block-resources": "^2.2.4",
     "puppeteer-extra-plugin-recaptcha": "^3.1.10",
-    "puppeteer-extra-plugin-stealth": "^2.4.9",
+    "puppeteer-extra-plugin-stealth": "^2.6.5",
     "puppeteer-page-proxy": "^1.2.5",
     "puppeteer-recorder": "^1.0.7",
     "random-useragent": "^0.3.1",
     "request-promise": "^4.2.5",
     "socket.io": "^2.3.0",
     "socks5-http-client": "^1.0.4",
+    "ssh-keygen": "^0.5.0",
     "telegraf": "^3.38.0",
     "tor-request": "^3.1.0",
+    "user-agents": "^1.0.559",
     "util": "^0.12.3",
     "uuid": "^8.1.0"
   },
