--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 PORT=2629
 USERNAME=BRAHIMAKAR
 NODE_ENV=development
-DATABASE_PASSWORD=brahim123
-DATABASE=mongodb+srv://brahim123:<PASSWORD>@cluster0-gvzjk.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PASSWORD=youpel123
+DATABASE=mongodb://youpel123:<PASSWORD>@cluster0-shard-00-00.lxvht.mongodb.net:27017,cluster0-shard-00-01.lxvht.mongodb.net:27017,cluster0-shard-00-02.lxvht.mongodb.net:27017/<dbname>?ssl=true&replicaSet=atlas-3x53wx-shard-0&authSource=admin&retryWrites=true&w=majority
 CLOUD_NAME=scapdatabase
 CLOUD_API_KEY=462153821677272
 CLOUD_API_SECRET=1nHNqeMz60x7Pgqf8rNYXYdChW0
 GMAIL_EMAIL=brahimakar5@gmail.com
-GMAIL_PASSWORD=NodeScraper11
+GMAIL_PASSWORD=NodeScraper110
 PROXY_USER=user-61298
 PROXY_PASSWORD=user-61298
