Create a cron job to execute tasks Sequentially

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "get-free-https-proxy": "^2.0.2",
     "jsdom": "^16.2.2",
     "mongoose": "^5.9.18",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.8",
     "puppeteer": "^3.3.0",
     "puppeteer-cluster": "^0.21.0",
