--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "check-proxy": "^0.3.3",
     "cloudinary": "^1.22.0",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dns": "^0.2.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
